Fix - Instead of using opacity for tiles, used different technique so that the mirchi and other icons are more visible and readable.

--- a/MvcWebRole1/Content/styles/mm.moviedetails.css
+++ b/MvcWebRole1/Content/styles/mm.moviedetails.css
@@ -37,14 +37,14 @@ div.navigate {
 }
 
 div.captionAndNavigate {
-    background-color: #000;
+    background-color: rgba(0,0,0,0.65);
     bottom: 0px;
     color: #FFFFFF;
     left: 0;
     margin-bottom: 0;
     margin-top: 0;
-    opacity: 0.7;
-    filter: alpha(opacity=70);
+    /*opacity: 0.7;
+    filter: alpha(opacity=70);*/
     padding: 15px;
     position: absolute;
     text-align: left;
